feat: 1920px on process too

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>StarLab.</title>
   </head>
   <body class="m-0 p-0 box-border">
-    <div class="absolute min-h-full w-full">
+    <div class="absolute min-h-full h-full 2xl:h-auto w-full">
       <img src="./images/hero-image.png" alt="bg-hero" class="object-cover w-full h-full" class="sm:w-32" />
     </div>
     <header class="relative flex flex-row justify-between items-center p-6 sm:p-10 2xl:p-14">
@@ -77,15 +77,15 @@
         </div>
       </section>
 
-      <section class="bg-primary w-full px-6 2xl:px-14 py-12 flex flex-col justify-center items-center gap-12">
-        <div class="flex flex-col 2xl:flex-row justify-center items-center pt-14 2xl:gap-[1.8rem]">
+      <section class="bg-primary w-full px-6 2xl:px-14 py-12 2xl:pb-32 flex flex-col justify-center items-center gap-12">
+        <div class="flex flex-col 2xl:flex-row justify-center items-center pt-14 2xl:pt-8 2xl:gap-[1.8rem]">
           <div class="flex flex-col justify-center items-center gap-2">
             <h2 class="font-primary text-white font-medium text-4xl 2xl:text-8xl">Kickstart</h2>
             <img src="./images/Vector 19.png" alt="lines" class="w-[10rem] 2xl:w-[25rem] -mt-4 2xl:-mt-8"/>
           </div>
           <p class="font-medium text-white text-4xl 2xl:text-8xl font-primary">your business</p>
         </div>
-        <div class="flex flex-wrap 2xl:flex-nowrap justify-center items-center gap-12 2xl:gap-6 2xl:pt-4">
+        <div class="flex flex-wrap 2xl:flex-nowrap justify-center items-center gap-12 2xl:gap-6 3xl:gap-12 2xl:pt-4">
           <div class="flex flex-col justify-between border border-white p-6 h-[30rem] sm:h-[35rem] w-[18rem] sm:w-[23rem] 2xl:w-[20rem]">
             <div class="flex flex-col justify-start gap-4">
               <img src="./images/Vector.png" alt="icon-socialmediacontentcreationandediting"class="w-16 sm:w-18"/>
@@ -141,8 +141,8 @@
         </div>
       </section>
 
-      <section class="flex flex-col justify-center items-center gap-12 px-6 2xl:px-14">
-        <h2 class="font-primary text-2xl 2xl:text-5xl font-medium text-third 2xl:self-start">Blueprint to Launch: <br /> The Path to Your Perfect Design</h2>
+      <section class="flex flex-col justify-center items-center gap-12 px-6 2xl:px-14 2xl:py-16">
+        <h2 class="font-primary text-2xl 2xl:text-5xl font-medium text-third sm:self-start">Blueprint to Launch: <br /> The Path to Your Perfect Design</h2>
         <div class="flex flex-col gap-12 2xl:gap-16 justify-center items-center 2xl:mt-8">
           <div class="flex flex-col 2xl:flex-row gap-6">
             <div class="flex flex-col justify-between items-center">
