feat: 1920px on process again

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./output.css" />
     <title>StarLab.</title>
   </head>
-  <body class="m-0 p-0 box-border">
+  <body class="m-0 p-0 box-border"> 
     <div class="absolute min-h-full h-full 2xl:h-auto w-full">
       <img src="./images/hero-image.png" alt="bg-hero" class="object-cover w-full h-full" class="sm:w-32" />
     </div>
@@ -20,11 +20,11 @@
       </button>
     </header>
     <section class="relative w-full min-h-screen flex flex-col gap-6 justify-center items-start px-6 sm:px-10 2xl:px-14 -mt-[5rem] sm:-mt-[9rem]">
-      <h1 class="font-primary text-white font-bold text-4xl sm:text-6xl 2xl:text-7xl 3xl:text-9xl leading-normal 2xl:pr-[35rem]">Transforming Brands, One Digital Experience
+      <h1 class="font-primary text-white font-bold text-4xl sm:text-6xl 2xl:text-7xl leading-normal 2xl:pr-[35rem]">Transforming Brands, One Digital Experience
         <span class="flex flex-row items-center gap-4"><img src="./images/Vector1.png" alt="icon-star1" class="w-6 sm:w-10 2xl:w-14" />
-          at a time<span><img src="./images/Vector3.png" alt="icon-star2" class="w-6 sm:w-10 2xl:w-14" /></span></span>
+          at a Time<span><img src="./images/Vector3.png" alt="icon-star2" class="w-6 sm:w-10 2xl:w-14" /></span></span>
       </h1>
-      <p class="font-secondary text-white text-lg sm:text-xl 2xl:text-2xl 3xl:text-4xl leading-[1.5rem] sm:leading-[2rem] 2xl:pr-[55rem]">
+      <p class="font-secondary text-white text-lg sm:text-xl 2xl:text-2xl 3xl:text-xs leading-[1.5rem] sm:leading-[2rem] 2xl:pr-[55rem]">
         Empower brands to grow and make a lasting impact online through tailored, high-quality digital solution
       </p>
       <button class="text-white text-xl sm:text-2xl border rounded-full py-[0.2rem] 2xl:py-[0.5rem] px-[0.9rem] 2xl:px-[1.5rem] uppercase">
@@ -44,7 +44,7 @@
           </p>
         </div>
         <div class="flex flex-wrap 2xl:flex-nowrap gap-6 sm:gap-10 justify-center items-center">
-          <div class="flex flex-col justify-start gap-">
+          <div class="flex flex-col justify-start gap-2">
             <img src="./images/image 1.png" alt="image-person1" />
             <p class="font-primary font-bold text-lg text-third">Brooke Carlize<span class="font-light font-secondary">, Art Director</span></p>
           </div>
@@ -77,7 +77,7 @@
         </div>
       </section>
 
-      <section class="bg-primary w-full px-6 2xl:px-14 py-12 2xl:pb-32 flex flex-col justify-center items-center gap-12">
+      <section class="bg-primary w-full px-6 2xl:px-14 pt-12 pb-18 2xl:pb-32 flex flex-col justify-center items-center gap-12">
         <div class="flex flex-col 2xl:flex-row justify-center items-center pt-14 2xl:pt-8 2xl:gap-[1.8rem]">
           <div class="flex flex-col justify-center items-center gap-2">
             <h2 class="font-primary text-white font-medium text-4xl 2xl:text-8xl">Kickstart</h2>
@@ -143,8 +143,8 @@
 
       <section class="flex flex-col justify-center items-center gap-12 px-6 2xl:px-14 2xl:py-16">
         <h2 class="font-primary text-2xl 2xl:text-5xl font-medium text-third sm:self-start">Blueprint to Launch: <br /> The Path to Your Perfect Design</h2>
-        <div class="flex flex-col gap-12 2xl:gap-16 justify-center items-center 2xl:mt-8">
-          <div class="flex flex-col 2xl:flex-row gap-6">
+        <div class="flex flex-col gap-16 2xl:gap-16 justify-center items-center 2xl:mt-8">
+          <div class="flex flex-col 2xl:flex-row gap-16">
             <div class="flex flex-col justify-between items-center">
               <img src="./images/undraw_remote_meeting_re_abe7 1.png" alt="icon-meetingtounderstandyourneeds" class="w-52"/>
               <div class="flex flex-col ">
@@ -170,7 +170,7 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col 2xl:flex-row gap-6">
+          <div class="flex flex-col 2xl:flex-row gap-16">
             <div class="flex flex-col justify-between items-center">
               <img src="./images/undraw_building_blocks_re_5ahy 1.png" alt="icon-design/development" class="w-52"/>
               <div class="flex flex-col">
